[package]
name = "twitch_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exponential_backoff = { path = "../exponential_backoff" }
downloader_config = { path = "../downloader_config" }


reqwest = { version = "0.11", features = ["default", "stream"] }
#twitch_api = { version = "0.7.0-rc.3", features = ["helix", "client", "twitch_oauth2", "reqwest"] }
tokio = { version = "1.23", features = ["full", "macros"] }
twitch_api = { version = "0.7.0-rc.4", features = ["all", "reqwest"] }
twitch_types = { version = "0.3.11" , features = ["stream", "timestamp", "default"] }
twitch_oauth2 = "0.10.0"

serde = "1.0.152"
serde_json = "1.0.91"

chrono = "0.4"
indicatif = "0.17"
futures = "0.3"
async-recursion = "1.0.0"
