[package]
name = "twba-twitch-data"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twba-backup-config = { version = "0.1", git = "https://github.com/OMGeeky/backup_config.git" }
exponential_backoff = { git = "https://github.com/OMGeeky/exponential_backoff" }

reqwest = { version = "0.11", features = ["default", "stream"] }
#twitch_api = { version = "0.7.0-rc.3", features = ["helix", "client", "twitch_oauth2", "reqwest"] }
tokio = { version = "1.23", features = ["full", "macros"] }
twitch_api = { version = "0.7.0-rc.6", features = ["all", "reqwest"] }
twitch_types = { version = "0.4.1", features = ["stream", "timestamp", "default"] }
twitch_oauth2 = "0.12.4"

serde = "1.0.152"
serde_json = "1.0.91"

thiserror = "1.0"
anyhow = "1.0"

chrono = "0.4"
indicatif = "0.17"
futures = "0.3"
async-recursion = "1.0.0"
log = "0.4"
simplelog = "0.12.1"
tracing = "0.1"
shellexpand = "3.1"
